# watergenic-coding-test

./: .gitignore  Makefile  README.md  config.yaml  pyproject.toml  requirements.txt  task_plan.md
.github/wiki/: Installation-Guide.md  Usage-Guide.md
.github/wiki/test_cases_outputs/: dynamic_train_test_case_output.txt  test_test_case_output.txt  train_test_case_output.txt
_github-giles/wiki/: AI_usage_report.md
data/: 202302_data_test.csv  202502_data_train.csv
mlruns/0/: meta.yaml
mlruns/828855017991072322/: meta.yaml
mlruns/828855017991072322/154126527b614f199fb6fbc87b85aa8d/: meta.yaml
mlruns/828855017991072322/154126527b614f199fb6fbc87b85aa8d/metrics/: training_mean_absolute_error  training_mean_squared_error  training_r2_score  training_root_mean_squared_error  training_score
mlruns/828855017991072322/154126527b614f199fb6fbc87b85aa8d/params/: columntransformer__pipeline__knnimputer__metric  columntransformer__pipeline__steps  steps
mlruns/828855017991072322/154126527b614f199fb6fbc87b85aa8d/tags/: mlflow.runName  mlflow.source.git.commit
mlruns/828855017991072322/2e79fc647df04498aa73e770ea366c6d/: meta.yaml
mlruns/828855017991072322/78c844afea434dd39a0f47ae808014ac/: meta.yaml
mlruns/828855017991072322/faed43a244b743e58eabb0e56bccd506/: meta.yaml
notebooks/: exploratory_data_analysis.ipynb
src/utils/: utils.py
src/watergenic_coding_test/: params.py  predict.py  train.py  train_dynamic.py
test_outputs_and_logs/: mlruns.csv  test_test_case_output.txt
tests/: test_predict.py  test_train.py  test_train_dynamic.py
(+58 files in other folders)
