[project]
name = "watergenic-coding-test"
version = "0.1.0"
description = ""
authors = [
    {name = "jerome roeser",email = "jerome.roeser@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "numpy (>=2.3.1,<3.0.0)",
    "pandas (>=2.3.1,<3.0.0)",
    "matplotlib (>=3.10.3,<4.0.0)",
    "seaborn (>=0.13.2,<0.14.0)",
    "statsmodels (>=0.14.5,<0.15.0)",
    "scikit-learn (>=1.7.0,<2.0.0)",
    "ipykernel (>=6.29.5,<7.0.0)",
    "mlflow (>=3.1.1,<4.0.0)",
    "click (>=8.2.1,<9.0.0)",
    "pytest (>=8.4.1,<9.0.0)"
]

[tool.poetry]
packages = [{include = "watergenic_coding_test", from = "src"}]


[tool.poetry.group.dev.dependencies]
pre-commit = "^4.2.0"
ruff = "^0.12.3"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
